# Masterthesis

./: Install_new_rover.md  SoftwarePlatform.md  development diague.md  diague_918.md  fast_replace.sh
keyboard_control/: CMakeLists.txt  ReadMe.md
keyboard_control/src/: keyboard_control_example.cpp  keyboard_control_new.cpp  keyboard_input_test.cpp  rc_subscriber.cpp
ros/keyboard_control/: CMakeLists.txt  package.xml
ros/keyboard_control/keyboard_control/src/: keyboard_control_node.cpp
ros/keyboard_control/src/: keyboard_control_node.cpp
ros/src/: keyboard_control_node.cpp
