<?xml version="1.0"?>
<package format="2">
  <name>your_keyboard_control_package</name>
  <version>0.0.0</version>
  <description>The keyboard control package</description>
  
  <maintainer email="s.gao-9@student.tudelft.nl">Your Name</maintainer>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>mavros_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>mavros_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  
  <export>
  </export>
</package>
